fix z index on IE

--- a/css/chart.css
+++ b/css/chart.css
@@ -3,6 +3,13 @@ body {
   font-family: Arial, Verdana, sans-serif;
 }
 
+#chart_container_holder {
+  display: none;
+  position: relative;
+  z-index: 100000;
+  width: 100%;
+  height: 100%;
+}
 
 #chart_container {
   display: none;
